unpackaged/main/default/objects/fferpcore__AccountExtension__c/fferpcore__AccountExtension__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__AccountExtensionHelp</customHelpPage>
    <description>Stores additional details for specific accounts.</description>
    <label>Account Extension</label>
    <nameField>
        <displayFormat>AE{0000000}</displayFormat>
        <label>Account Extension ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>