unpackaged/main/default/objects/fferpcore__AccountExtension__c/fields/fferpcore__Account__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Account__c</fullName>
    <description>Salesforce account to which this account extension relates.</description>
    <inlineHelpText>Salesforce account to which this account extension relates.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Extension</relationshipLabel>
    <relationshipName>AccountExtension</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>