unpackaged/main/default/objects/fferpcore__AccountExtension__c/fields/fferpcore__EInvoicingAddressIdentifier__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__EInvoicingAddressIdentifier__c</fullName>
    <description>The electronic address for this account which is used for e-invoicing. The combination of scheme plus identifier must be unique.</description>
    <inlineHelpText>The electronic address for this account which is used for e-invoicing. The combination of scheme plus identifier must be unique.</inlineHelpText>
    <label>E-Invoicing Address Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>