unpackaged/main/default/objects/fferpcore__AccountExtension__c/fields/fferpcore__EInvoicingDoNotAutoSend__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__EInvoicingDoNotAutoSend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, e-invoices for this account will not be sent automatically even if the org-wide flag for automatically sending e-invoices is enabled.</description>
    <inlineHelpText>If selected, e-invoices for this account will not be sent automatically even if the org-wide flag for automatically sending e-invoices is enabled.</inlineHelpText>
    <label>Do Not Automatically Send E-Invoices</label>
    <type>Checkbox</type>
</CustomField>