unpackaged/main/default/objects/fferpcore__AccountExtension__c/fields/fferpcore__EInvoicingSchemeID__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__EInvoicingSchemeID__c</fullName>
    <description>The scheme for the electronic address in the format required by your e-invoicing provider. The combination of scheme plus identifier must be unique.</description>
    <inlineHelpText>The scheme for the electronic address in the format required by your e-invoicing provider. The combination of scheme plus identifier must be unique.</inlineHelpText>
    <label>E-Invoicing Address Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>